* Resolve {bz: 1524} again by making #statistics-attribution as white-space: nowrap.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@10857 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -2022,3 +2022,7 @@ div.pagination-container .paging-forward {
     text-align: left;
     float: left;
 }
+
+#statistics-attribution {
+    white-space: nowrap;
+}
